--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.4.0",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5",
+    "shortid": "^2.2.8",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
