--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "NODE_PATH=./ NODE_ENV=production node ./server/bin/www",
     "generate": "NODE_PATH=./ nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@slack/client": "^3.15.0",
